--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,10 +9,10 @@
     <header>
       <h1>Week 5 Assignment - Part 2</h1>
       <h2>Adams Record Shop</h2>
-    <header
-    <main>
+    <header/>
+  <main>
       <p>See console for output.</p>
-    </main>
+  </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
