--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,7 +11,7 @@
       <h2>Adams Record Shop</h2>
     <header/>
   <main>
-      <p>See console for output.</p>
+      <p>See console for output.(you can't see me :)</p>
   </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
