added unordered question list

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -13,6 +13,11 @@
   <main>
       <p>See console for output.(you can't see me :)</p>
   </main>
-    <!-- Create an unordered list with any questions you have -->
+<ul>
+  <li>if sounds are recorded digitally, does it make sense to convert the sound
+  back to analog to press a record when it will be converted back to digital
+  when run through your media player?</li>
+  <li>Will records be around in 500 years?</li>
+</ul>
   </body>
 </html>
